# quiz-server

./: pyproject.toml
migrations/: env.py
migrations/versions/: 7b649185c498_create_movie_and_director_table.py  9babc0fc1709_create_movie_table.py  a4d6becd12fc_create_actor_table.py  d87fa7e1c71a_create_genre_table.py  f0c61878843d_create_nation_table.py
src/: main.py
src/core/: config.py
src/database/: __init__.py  base.py  session.py
src/model/: __init__.py  actor.py  director.py  genre.py  movie.py  movie_actor.py  movie_director.py  movie_genre.py  movie_nation.py  nation.py
